Kubernetes/Project/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: api
          image: docker.io/akshatham/simple_blog_api
          ports:
            - containerPort: 3000
          resources:
            limits:
                memory: "256Mi"
                cpu: "500m"
